[workspace]
members = ["amqp",
    "rmf2_task_orchestrator",
    "workflow_executor",
]
resolver = "3"

[workspace.dependencies]
crossflow = { version = "0.0.6", features = ["diagram"] }
crossflow_diagram_editor = { version = "0.0.6", features = ["frontend", "router"] }
axum = "0.8.6"
tokio = { version = "1.48.0", features = ["full"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tracing = "0.1.43"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
schemars = "0.9.0"
reqwest = { version = "0.12.24", features = ["json"] }
workflow_executor = { path = "workflow_executor" }
amqp = { path = "amqp" }
lapin = { version = "3.7.2" }
rumqttc = "0.25.1"
