<?xml version="1.0"?>
<package format="3">
  <name>rmf2_scheduler</name>
  <version>0.1.0</version>
  <description>
    An event scheduler for RMF2.
    These events including robot tasks and other events that is related to the robot operation.
  </description>
  <maintainer email="chenbn@artc.a-star.edu.sg">Chen Bainian</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>croncpp_vendor</build_depend>
  <build_depend>taskflow_vendor</build_depend>
  <build_depend>libcurl-dev</build_depend>
  <build_depend>libboost-dev</build_depend>
  <depend>curl</depend>
  <depend>nlohmann-json-dev</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>ament_cmake_gmock</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
