<?xml version="1.0"?>
<package format="3">
  <name>rmf2_scheduler_py</name>
  <version>0.1.0</version>
  <description>
    Python Bindings for RMF2 Scheduler
  </description>
  <maintainer email="chenbn@artc.a-star.edu.sg">Chen Bainian</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <buildtool_depend>python3</buildtool_depend>
  <buildtool_depend>python3-venv</buildtool_depend>

  <build_depend>pybind11_vendor</build_depend>
  <build_depend>pybind11_json_vendor</build_depend>
  <build_depend>taskflow_vendor</build_depend>
  <depend>rmf2_scheduler</depend>
  <test_depend>ament_cmake_pytest</test_depend>
  <test_depend>python3-pytest</test_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
