[metadata]
name = rmf2_scheduler_server_py
version = attr: rmf2_scheduler_server_py.__version__
url = https://rmf2.readthedocs.io
project_urls =
    GitHub = https://gitlab.com/ros-industrial/rmf2_scheduler/tree/main/rmf2_scheduler_server_py
author = Chen Bainian
author_email = chenbn@artc.a-star.edu.sg
maintainer = Chen Bainian
maintainer_email = chenbn@artc.a-star.edu.sg
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Plugins
    Intended Audience :: Developers
    Operating System :: POSIX
    Programming Language :: Python :: 3
    Topic :: Software Development :: Server Backend
license = Apache License, Version 2.0
description = Demo Python API server for RMF2 Scheduler.
long_description = file: README.md
keywords = rmf2_scheduler

[options]
python_requires = >=3.6
install_requires =
  fastapi>=0.101.0
  uvicorn>=0.24.0
tests_require = 
  pytest
packages = find:
zip_safe = true

[options.entry_points]
console_scripts =
    rmf2_scheduler_server_py = rmf2_scheduler_server_py.cli:main

[flake8]
import-order-style = google
max-line-length = 80

[coverage:run]
source = rmf2_scheduler
