<?xml version="1.0"?>
<?xml-model
  href="http://download.ros.org/schema/package_format2.xsd"
  schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>taskflow_vendor</name>
  <version>3.5.0</version>
  <description>
    Wrapper around taskflow, it provides a fixed CMake module and an ExternalProject build of it.
  </description>

  <maintainer email="chenbn@artc.a-star.edu.sg">Chen Bainian</maintainer>

  <license>Apache License 2.0</license>  <!-- the contents of this package are Apache 2.0 -->
  <license>MIT</license>  <!-- taskflow is MIT -->

  <url type="website">https://github.com/taskflow/taskflow</url>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>git</buildtool_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
