[package]
name = "rmf2_task_orchestrator"
version = "0.1.0"
edition = "2024"

[dependencies]
amqp = { workspace = true }
axum = { workspace = true }
config = "0.15.19"
dotenvy = "0.15.7"
tokio = { workspace = true }
serde = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
workflow_executor = { workspace = true }
