<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>vda5050_core</name>
  <version>0.0.0</version>
  <description>Tools for VDA5050 development workflows</description>
  <maintainer email="saurabh_kamat@a-star.edu.sg">Saurabh Kamat</maintainer>
  <maintainer email="lim_yew_hao@a-star.edu.sg">Yew Hao Lim</maintainer>
  <maintainer email="chen_bainian@a-star.edu.sg">Bainian Chen</maintainer>
  <license>Apache License 2.0</license>

  <author email="glenn_tan@a-star.edu.sg">Glenn Tan</author>
  <author email="shawnkengkiat@gmail.com">Shawn Chan</author>
  <author email="john_abogado@a-star.edu.sg">John Abogado</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>nlohmann-json-dev</build_depend>

  <depend>libpaho-mqtt-dev</depend>
  <depend>libpaho-mqttpp-dev</depend>
  <depend>fmt</depend>

  <exec_depend>python3</exec_depend>
  <exec_depend>python3-paho-mqtt</exec_depend>

  <test_depend>ament_cmake_cppcheck</test_depend>
  <test_depend>ament_cmake_cpplint</test_depend>
  <test_depend>ament_cmake_clang_format</test_depend>
  <test_depend>ament_cmake_copyright</test_depend>
  <test_depend>ament_cmake_gmock</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
