<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>vda5050_core_py</name>
  <version>0.1.0</version>
  <description>Python bindings for the vda5050_core C++ Adapter (AGV side).</description>
  <maintainer email="dev@artc.a-star.edu.sg">ROS-Industrial Consortium Asia Pacific</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>pybind11_vendor</depend>
  <depend>vda5050_core</depend>

  <exec_depend>python3-requests</exec_depend>
  <exec_depend>python3-websockets</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>ament_cmake_pytest</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
